[gd_scene load_steps=21 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://textures/grad01.png" type="Texture" id=2]
[ext_resource path="res://textures/road.png" type="Texture" id=3]
[ext_resource path="res://textures/scull.png" type="Texture" id=4]
[ext_resource path="res://textures/ink-drop.png" type="Texture" id=5]
[ext_resource path="res://textures/spider.png" type="Texture" id=6]
[ext_resource path="res://textures/hatch.png" type="Texture" id=7]
[ext_resource path="res://scripts/player.gd" type="Script" id=8]
[ext_resource path="res://textures/cars.png" type="Texture" id=9]
[ext_resource path="res://sounds/engine_loop01.smp" type="Sample" id=10]
[ext_resource path="res://sounds/hit.smp" type="Sample" id=11]
[ext_resource path="res://objects/car.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 26.29, 55.4048 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 18.6826, 5.38129 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 2.436, 51.9664 )

[sub_resource type="Animation" id=4]

resource/name = "blink"
length = 1.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=5]

resource/name = "squ"
length = 0.2
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05, 0.1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 5, 10 ]
}

[sub_resource type="SampleLibrary" id=6]

samples/engine = {
"db": -20.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}
samples/hit = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 11 )
}

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 13.4085, 1065.94 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 586.164, 45.554 )

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="2d" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="2d"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="TextureFrame" type="TextureFrame" parent="2d/CanvasLayer"]

visibility/blend_mode = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -10.0
margin/top = 0.0
margin/right = 550.0
margin/bottom = 960.0
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="2d"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = false

[node name="road" type="ParallaxLayer" parent="2d/ParallaxBackground"]

motion/scale = Vector2( 1, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 2046 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureFrame" type="TextureFrame" parent="2d/ParallaxBackground/road"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 479.0
margin/right = 540.0
margin/bottom = 1161.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 0

[node name="TextureFrame2" type="TextureFrame" parent="2d/ParallaxBackground/road"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 1161.0
margin/right = 540.0
margin/bottom = 1843.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 0

[node name="TextureFrame1" type="TextureFrame" parent="2d/ParallaxBackground/road"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -203.0
margin/right = 540.0
margin/bottom = 479.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 0

[node name="scull" type="ParallaxLayer" parent="2d/ParallaxBackground"]

motion/scale = Vector2( 1, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 20000 )

[node name="TextureFrame" type="TextureFrame" parent="2d/ParallaxBackground/scull"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 192.0
margin/top = 1271.0
margin/right = 350.0
margin/bottom = 1507.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="TextureFrame2" type="TextureFrame" parent="2d/ParallaxBackground/scull"]

rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 198.0
margin/top = -135.0
margin/right = 498.0
margin/bottom = 160.0
texture = ExtResource( 5 )
stretch_mode = 0

[node name="TextureFrame1" type="TextureFrame" parent="2d/ParallaxBackground/scull"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 285.0
margin/top = -1516.0
margin/right = 469.0
margin/bottom = -1280.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="hatch" type="ParallaxLayer" parent="2d/ParallaxBackground"]

editor/display_folded = true
motion/scale = Vector2( 1, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 2400 )

[node name="TextureFrame" type="TextureFrame" parent="2d/ParallaxBackground/hatch"]

rect/rotation = 180.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 154.0
margin/top = 108.0
margin/right = 241.0
margin/bottom = 195.0
texture = ExtResource( 7 )
stretch_mode = 0

[node name="TextureFrame1" type="TextureFrame" parent="2d/ParallaxBackground/hatch"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 383.0
margin/top = 691.0
margin/right = 470.0
margin/bottom = 778.0
texture = ExtResource( 7 )
stretch_mode = 0

[node name="player" type="RigidBody2D" parent="2d"]

transform/pos = Vector2( 426.382, 852.882 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -2 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 0.8
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 3
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 8 )

[node name="Label" type="Label" parent="2d/player"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -20.0
margin/top = 90.0
margin/right = 20.0
margin/bottom = 104.0
custom_colors/font_color = Color( 0, 1, 0.15625, 1 )
text = "100"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Label1" type="Label" parent="2d/player"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -20.0
margin/top = 105.0
margin/right = 20.0
margin/bottom = 119.0
custom_colors/font_color = Color( 0, 1, 0.15625, 1 )
text = "100"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="2d/player"]

transform/pos = Vector2( 0, -2 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="2d/player"]

transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )
vframes = 3
hframes = 5
__meta__ = {
"_edit_lock_": true
}

[node name="front" type="Area2D" parent="2d/player"]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -53.9013 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="2d/player/front"]

transform/pos = Vector2( 0, -53.9013 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="l_side" type="Area2D" parent="2d/player"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -26.9107, -2.47473 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="2d/player/l_side"]

transform/pos = Vector2( -26.9107, -2.47473 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="r_side" type="Area2D" parent="2d/player"]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 26.702, -3.35504 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="2d/player/r_side"]

transform/pos = Vector2( 26.702, -3.35504 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="2d/player"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="restart_timer" type="Timer" parent="2d/player"]

process_mode = 1
wait_time = 1.5
one_shot = true
autostart = false

[node name="anim" type="AnimationPlayer" parent="2d/player"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/blink = SubResource( 4 )
anims/squ = SubResource( 5 )
playback/active = true
playback/speed = 1.5
blend_times = [  ]
autoplay = ""

[node name="SamplePlayer" type="SamplePlayer" parent="2d/player"]

config/polyphony = 1
config/samples = SubResource( 6 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="cam_pointer" type="Position2D" parent="2d/player"]

__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="2d"]

editor/display_folded = true
transform/pos = Vector2( 270, 480 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0

[node name="blocks" type="StaticBody2D" parent="2d/Camera2D"]

transform/pos = Vector2( -270, -480 )
input/pickable = false
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 13.5647, 379.252 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 7 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 524.916, 376.379 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="2d/Camera2D/blocks"]

transform/pos = Vector2( 13.5647, 379.252 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D1" type="CollisionShape2D" parent="2d/Camera2D/blocks"]

transform/pos = Vector2( 524.916, 376.379 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 1

[node name="killer" type="Area2D" parent="2d/Camera2D"]

transform/pos = Vector2( 3.80115, 776.014 )
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -0.308838, 345.355 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="2d/Camera2D/killer"]

transform/pos = Vector2( -0.308838, 345.355 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="cars" type="Node2D" parent="2d"]

[node name="car" parent="2d/cars" instance=ExtResource( 12 )]

transform/pos = Vector2( 95.0952, -276.873 )

[node name="car1" parent="2d/cars" instance=ExtResource( 12 )]

transform/pos = Vector2( 345.456, -904.319 )

[node name="car2" parent="2d/cars" instance=ExtResource( 12 )]

transform/pos = Vector2( 190.912, -1460.68 )

[connection signal="body_enter" from="2d/player" to="2d/player" method="_on_player_body_enter"]

[connection signal="body_enter" from="2d/player/front" to="2d/player" method="_on_front_body_enter"]

[connection signal="body_enter" from="2d/player/l_side" to="2d/player" method="_on_l_side_body_enter"]

[connection signal="body_enter" from="2d/player/r_side" to="2d/player" method="_on_r_side_body_enter"]

[connection signal="timeout" from="2d/player/Timer" to="2d/player" method="_on_Timer_timeout"]

[connection signal="timeout" from="2d/player/restart_timer" to="2d/player" method="_on_restart_timer_timeout"]

[connection signal="body_enter" from="2d/Camera2D/killer" to="." method="_on_killer_body_enter"]


